tests/errors/test_38.x
// Char expr greater than one character;

fn main() -> int {

    let x: char = 'ab';
}